--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-MONGODB_URL = mongodb+srv://bachuga:bachuga123@cluster0.yjpeshs.mongodb.net/?retryWrites=true&w=majority
+MONGODB_URL = mongodb+srv://bachuga:bachuga123@cluster0.ko695cs.mongodb.net/?retryWrites=true&w=majority
 ACCESS_TOKEN ="ASDASD"
 REFRESH_TOKEN = "ZMXNMV"
