update bill product

--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-MONGODB_URL = mongodb+srv://bachuga:bachuga123@cluster0.wl6a7qp.mongodb.net/?retryWrites=true&w=majority
+MONGODB_URL = mongodb+srv://bachuga:bachuga123@cluster0.oqxdf37.mongodb.net/?retryWrites=true&w=majority
 ACCESS_TOKEN ="ASDASD"
 REFRESH_TOKEN = "ZMXNMV"
